--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGODB_URI=mongodb+srv://patthadon:Pattadon55.@gpattha.cvgawyo.mongodb.net/
+NEXTAUTH_SECRET = 123
+NEXTAUTH_URL = http://localhost:3000/
